--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
              <footer>
                 <div>
                     <img src="https://image.shutterstock.com/image-vector/365-infinity-logo-icon-design-260nw-1425967055.jpg" alt="Loading Image" class="mainlogo">
-                    <p>Powered by 365 Entertainment Portal 2019. All Rights Reserved.</p>
+                    <p style="color: black;font-size: 20px; ">Powered by 365 Entertainment Portal 2019. All Rights Reserved.</p>
                 </div>
              </footer>
 
