add movie section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html"><img src="https://image.shutterstock.com/image-vector/365-infinity-logo-icon-design-260nw-1425967055.jpg" alt="Loading Image" class="mainlogo"></a>
             <ul class="mynavlist">
                 <li class="mynav-item" id="item1">
-                    <a href="movies.html" class="mynav-links">Movies</a>
+                    <a href="./movie.html" class="mynav-links">Movies</a>
                 </li>
                 <li class="mynav-item" id="item2">
                     <a href="" class="mynav-links">TV Series</a>
